--- a/20190215/pyquan.html
+++ b/20190215/pyquan.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0,minimum-scale=1.0, maximum-scale=1.0 maximum-scale=1.0, user-scalable=no">
     <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
@@ -17,16 +17,15 @@
 
         html,
         body {
-            height: 100%;
+            overflow-x: hidden;
         }
-
-        .header,
-        .main {
-            width: 100%;
+        body{
+            max-width: 400px;
+            margin:0 auto;
         }
 
         .header {
-            height: 40%;
+            height: 15rem;
             background: url('https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1550204348672&di=bac08b7bfe15952b92f67ff6158babfe&imgtype=0&src=http%3A%2F%2Fimg3.doubanio.com%2Fview%2Fnote%2Fl%2Fpublic%2Fp49994435.jpg') no-repeat;
             background-size: 100% auto;
         }
@@ -60,8 +59,8 @@
         .dongtai {
             position: relative;
             height: 300px;
-            ;
             display: flex;
+            padding-top: 10px;
             border-bottom: .8px solid #bbb;
         }
 
@@ -80,7 +79,11 @@
             padding-top: 10px;
             max-height: 5rem;
             font-size: .8rem;
+            display: -webkit-box;
+            -webkit-box-orient: vertical;
+            -webkit-line-clamp: 3;
             overflow: hidden;
+
         }
 
         .dongtai .time {
@@ -132,30 +135,48 @@
         '过去有句话叫一千个读者就有一千个哈姆雷特，但是我的心愿，我说句狂话，我希望我这个形象出来之后，一千个观众心目中只有一个美猴王！',
         '大家好，我是六小龄童，是大闹天宫的首席文化大使，一朝大圣，一生大圣，演绎美猴王齐天大圣五十载。七十二变显神通，百般兵器样样有。火眼金睛金箍棒，重温西游文化经典，感受不一样的西游文化，俺老孙等着你'
 
-    ]
-    for (let i = 0; i < 100; i++) {
-        let imgrandom = parseInt(Math.random() * 3);
-        let imgsrc = imgrandom == 2 ? '2.gif' : imgrandom == 1 ? '1.jpg' : '3.jpg';
-        let strrandom = parseInt(Math.random() * 4);
-        let content = str[strrandom]
-        $('.main').append($(
-            '<div class="dongtai">\
+    ];
+    let append = (n) => {
+
+        for (let i = 0; i < n; i++) {
+            let imgrandom = parseInt(Math.random() * 3);
+            let imgsrc = imgrandom == 2 ? '2.gif' : imgrandom == 1 ? '1.jpg' : '3.jpg';
+            let strrandom = parseInt(Math.random() * 4);
+            let content = str[strrandom]
+            $('.main').append($(
+                '<div class="dongtai">\
                 <img class="avatar" src="avator.jpg" />\
                 <div class="maincontent">\
                     <a class="name">张大晨</a>\
                     <p class="content">\
-                        '+content+'\
+                        ' +
+                content + '\
                         <div class="img"> <img src="' +
-            imgsrc +
-            '" width="150px" height="150px"></div>\
+                imgsrc +
+                '" width="150px" height="150px"></div>\
                        \
                     </p>\
                     <span class="time">20分钟前</span>\
                     <button><img src="icon.png" width="100%" /></button>\
                 </div>\
             </div>'
-        ));
+            ));
+        }
+    };
+    append(10);
+    
+    if($('body').width()>=400){
+        $('html').css({'background':'#3333'});
+        $('body').css({'background':'#fff'});
     }
+    $(window).scroll(function (e) {
+        var scrollTop = $(this).scrollTop();
+        var scrollHeight = $(document).height();
+        var windowHeight = $(this).height();
+        if (scrollTop + windowHeight >= scrollHeight - 100) {
+            append(3);
+        }
+    });
 </script>
 
 </html>
