--- a/index.html
+++ b/index.html
@@ -85,6 +85,17 @@
                 </div>
                 <div class="cntl-icon cntl-center">0215</div>
             </div>
+
+            <div class="cntl-state">
+                    <div class="cntl-content">
+                        <h4>2019/02/20</h4>
+                        <p>
+                            <span> 淘宝登录：<a target="_blank" href="20190220/tblogin.html">河大首页</a></span>
+    
+                        </p>
+                    </div>
+                    <div class="cntl-icon cntl-center">0220</div>
+                </div>
         </div>
     </div>
     <script type="text/javascript">
