--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     <div class="cntl-content">
                         <h4>2019/02/20</h4>
                         <p>
-                            <span> 淘宝登录：<a target="_blank" href="20190220/tblogin.html">河大首页</a></span>
+                            <span> 淘宝登录：<a target="_blank" href="20190220/tblogin.html">淘宝</a></span>
     
                         </p>
                     </div>
