--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 <div class="cntl-content">
                     <h4>2019/02/21</h4>
                     <p>
-                        <span> 分页器：<a target="_blank" href="20192021/pager.html">分页器：</a></span>
+                        <span> 分页器：<a target="_blank" href="20192021/pager.html">分页器</a></span>
 
                     </p>
                 </div>
