淘宝登录拉拉

--- a/20192021/pager.html
+++ b/20192021/pager.html
@@ -57,6 +57,11 @@
             border:1px solid #2088;
             font-size: 1.3rem;
         }
+        button:hover{
+            
+            color: #fff;
+            background: #2085;
+        }
     </style>
 </head>
 
